# middleware/validate.js
@@ -21,13 +21,22 @@ const saveContact = (req, res, next) =>  {
         }
     });
 };
-
+//name, quantity, unityprice, description
+//category
+// "Vegetable"
+// expiration_date
+// "03/30/2025"
+// vendor_id
+// "0001"
 const saveItem = (req, res, next) =>  {
     const validationRule = {
         name: "required|string",
-        value: "required|string",
-        quantity: "required|email",
-        unityprice: "required|string"
+        quantity: "required|numeric",
+        unityprice: "required|numeric",
+        description: "string",
+        category: "string",
+        expiration_date: "required|date",
+        vendor_id: "required|string"
     };
     validator(req.body, validationRule, {}, (err,status) => {
         if (!status){
